Use Files.readString() and reactivate ColorParserTest